microservices/author-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: author
  name: author
spec:
  replicas: 5
  selector:
    matchLabels:
      io.kompose.service: author
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/library: "true"
        io.kompose.service: author
    spec:
      containers:
        - image: yahyrparedes/ms-author
          name: author
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
status: {}
