microservices/book-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: book
  name: book
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: book
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/library: "true"
        io.kompose.service: book
    spec:
      containers:
        - image: yahyrparedes/ms-book
          name: book
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
status: {}
