microservices/author-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: author
  name: author
spec:
  ports:
    - name: "3010"
      port: 3010
      targetPort: 3000
  selector:
    io.kompose.service: author
status:
  loadBalancer: {}
