microservices/book-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: book
  name: book
spec:
  ports:
    - name: "3020"
      port: 3020
      targetPort: 3000
  selector:
    io.kompose.service: book
status:
  loadBalancer: {}
